--- a/Julia_fmincon_tests/Project.toml
+++ b/Julia_fmincon_tests/Project.toml
@@ -12,6 +12,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MuJoCo = "1c101251-5e0f-4746-b44c-0728d433b68a"
 Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+OpenLibm_jll = "05823500-19ac-5b8b-9628-191a04bc5112"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
