single finger test

--- a/Julia_fmincon_tests/Project.toml
+++ b/Julia_fmincon_tests/Project.toml
@@ -3,6 +3,7 @@ BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
