--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 MIDI = "f57c4921-e30c-5f49-b073-3f2f2ada663e"
 MusicManipulations = "274955c0-c284-5bf7-b122-5ecd51c559de"
 MusicVisualizations = "8e838768-4b4f-4130-9d6d-43f7b35ca0d6"
